--- a/calc.html
+++ b/calc.html
@@ -14,39 +14,37 @@
     </section>
     <section class = "calcBtn">
       <div class = "buttonsRowTop">
-        <button class = "buttons">AC</button>
-        <button class = "buttons">+/-</button>
-        <button class = "buttons">&percnt;</button>
-        <button class = "buttons">&divide;</button>
+        <button class = "buttonsTriple" id = "reset" >AC</button>
+        <button class = "buttons" id = "operations">&divide;</button>
       </div>
 
       <div class = "buttonsRow">
-        <button class = "buttons">7</button>
-        <button class = "buttons">8</button>
-        <button class = "buttons">9</button>
-        <button class = "buttons">&times;</button>
+        <button class = "buttons" id = "numbers">7</button>
+        <button class = "buttons" id = "numbers" >8</button>
+        <button class = "buttons" id = "numbers" >9</button>
+        <button class = "buttons" id = "operations">&times;</button>
       </div>
 
       <div class = "buttonsRow">
-        <button class = "buttons">4</button>
-        <button class = "buttons">5</button>
-        <button class = "buttons">6</button>
-        <button class = "buttons">&minus;</button>
+        <button class = "buttons" id = "numbers" >4</button>
+        <button class = "buttons" id = "numbers" >5</button>
+        <button class = "buttons" id = "numbers" >6</button>
+        <button class = "buttons" id = "operations">&minus;</button>
       </div>
 
       <div class = "buttonsRow">
-        <button class = "buttons">1</button>
-        <button class = "buttons">2</button>
-        <button class = "buttons">3</button>
-        <button class = "buttons">&plus;</button>
+        <button class = "buttons" id = "numbers" >1</button>
+        <button class = "buttons" id = "numbers" >2</button>
+        <button class = "buttons" id = "numbers" >3</button>
+        <button class = "buttons" id = "operations">&plus;</button>
       </div>
 
         <div class = "buttonsRow">
-          <button class = "buttonsDouble">0</button>
-          <button class = "buttons">.</button>
-          <button class = "buttons">&equals;</button>
+          <button class = "buttonsDouble" id = "numbers" >0</button>
+          <button class = "buttons" id = "numbers" >.</button>
+          <button class = "buttons" id = "equal">&equals;</button>
       </div>
-      
+
     </section>
   </div>
 </body>
